# pySigma-backend-powershell

./: .gitignore  LICENSE  README.md  Read-WinEvent.psm1  debug.py  get_dataset.py  get_sigma_rules.py  pyproject.toml  sigma2powershell.py  suspicious_local_account_activity.yml
.github/workflows/: release.yml  test.yml
demo/: demo.py  powershell_backend.py  powershell_pipeline.py  suspicious_local_account_activity.yml
rules/: net_connection_win_wscript.yml  win_alert_mimikatz_keywords.yml
rules/00-TA0043-Reconnaissance/: test-01.yml  test-02.yml  test-03.yml
rules/02-TA0001-Initial-Access/: local_account_activity.yml
rules/03-TA0002-Execution/T1059.001-PowerShell/: download-via-powershell.yml
rules/TA0001-Initial-Access/: local_account_activity.yml  test.yml
rules/TA0002-Execution/T1059.001-PowerShell/: download-via-powershell.yml  privileged-user-command-line-interface-activity.yml
scripts/: Read-WinEvent.ps1  get_dataset.py  get_sigma_rules.py  sigma2powershell.py
sigma/backends/powershell/: __init__.py  powershell.py
sigma/pipelines/powershell/: __init__.py  powershell.py  powershell.py.backup
tests/: test_backend_powershell.py  test_pipelines_powershell.py
tests/rules/00-TA0043-Reconnaissance/: test-01.yml
