[tool.poetry]
name = "pySigma-backend-powershell"
version = "0.1.0"
description = "pySigma PowerShell Backend"
authors = ["Victor Fernandez III <@cyberphor>"]
license = "MIT"
repository = "https://github.com/cyberphor/pySigma-backend-powershell"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
