[tool.poetry]
name = "pySigma-backend-powershell"
version = "0.1.1"
description = "pySigma PowerShell Backend"
authors = ["Victor Fernandez III <@cyberphor>"]
license = "MIT"
repository = "https://github.com/cyberphor/pySigma-backend-powershell"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.10.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
