[tool.poetry]
name = "pySigma-backend-powershell"
version = "0.1.2"
description = "pySigma PowerShell Backend"
authors = ["Victor Fernandez III <@cyberphor>"]
license = "MIT"
repository = "https://github.com/cyberphor/pySigma-backend-powershell"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.11"
pysigma = "^0.11.14"
pytest = "^8.3.3"

[tool.poetry.scripts]
sigma2powershell = "scripts.sigma2powershell:main"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
